Overflow property fixed for windows

--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ body {
   background-color: #099164;
   border-radius: 3rem;
   /* padding: 2rem; */
-  overflow: scroll;
+  overflow: auto;
 }
 
 .loading,
